--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -197,7 +197,8 @@ binary_sensor:
           id: touchfield_1
           state: OFF
 #     - script.execute: refresh_led_default
-      - script.execute: button_pressed(1)
+      - script.execute: button_pressed
+          button: 1
     on_release:
       - lambda: |-
           uint32_t long_press_duration = millis() - id(button_press_start_time)[0];
@@ -220,7 +221,8 @@ binary_sensor:
           id: touchfield_2
           state: OFF
 #     - script.execute: refresh_led_default
-      - script.execute: button_pressed(2)
+      - script.execute: button_pressed
+          button: 2
     on_release:
       - lambda: |-
           uint32_t long_press_duration = millis() - id(button_press_start_time)[1];
@@ -243,7 +245,8 @@ binary_sensor:
           id: touchfield_3
           state: OFF
 #     - script.execute: refresh_led_default
-      - script.execute: button_pressed(3)
+      - script.execute: button_pressed
+          button: 3
     on_release:
       - lambda: |-
           uint32_t long_press_duration = millis() - id(button_press_start_time)[2];
@@ -266,7 +269,8 @@ binary_sensor:
           id: touchfield_4
           state: OFF
 #     - script.execute: refresh_led_default
-      - script.execute: button_pressed(4)
+      - script.execute: button_pressed
+          button: 4
     on_release:
       - lambda: |-
           uint32_t long_press_duration = millis() - id(button_press_start_time)[3];
