--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -197,7 +197,8 @@ binary_sensor:
           id: touchfield_1
           state: OFF
 #     - script.execute: refresh_led_default
-      - script.execute: button_pressed
+      - script.execute:
+          id: button_pressed
           button: 1
     on_release:
       - lambda: |-
@@ -221,7 +222,8 @@ binary_sensor:
           id: touchfield_2
           state: OFF
 #     - script.execute: refresh_led_default
-      - script.execute: button_pressed
+      - script.execute:
+          id: button_pressed
           button: 2
     on_release:
       - lambda: |-
@@ -245,7 +247,8 @@ binary_sensor:
           id: touchfield_3
           state: OFF
 #     - script.execute: refresh_led_default
-      - script.execute: button_pressed
+      - script.execute:
+          id: button_pressed
           button: 3
     on_release:
       - lambda: |-
@@ -269,7 +272,8 @@ binary_sensor:
           id: touchfield_4
           state: OFF
 #     - script.execute: refresh_led_default
-      - script.execute: button_pressed
+      - script.execute:
+          id: button_pressed
           button: 4
     on_release:
       - lambda: |-
