--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -738,7 +738,7 @@ script:
               id(button_color)[2] / 100.0f
             )
             .set_brightness(1.0)
-            .set_transition_length()
+            .set_transition_length(0.1)
             .perform();
 
           // Set brightness and color (assuming you’re using effects or color-capable lights)
