--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -621,7 +621,7 @@ tx_ultimate_touch:
     - script.execute:
         id: button_pressed
         button: 0
-        x: touch.x
+        x: tx_touch.x
     - lambda: >
         ESP_LOGD("tx_ultimate_touch.on_press", "Touch Position: %d / State: %d", touch.x, touch.state);
 
