--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -618,12 +618,10 @@ tx_ultimate_touch:
 
   on_press:
 #   - script.execute: led_on_touch
-    - script.execute:
-        id: button_pressed
-        button: 0
-        x: tx_touch.x
-    - lambda: >
+    - lambda: |-
         ESP_LOGD("tx_ultimate_touch.on_press", "Touch Position: %d / State: %d", touch.x, touch.state);
+        int button = 0;
+        id(button_pressed) -> execute(button, touch.x);
 
   on_release:
     - script.execute:
